<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ApplicationActivity" >
    
	<TextView
	    android:id="@+id/nameTextViewField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

     <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/profile_button_label"
        android:onClick="onProfileButtonClicked" />
     
     <EditText
	      android:id="@+id/EditText1"
	      android:inputType="textEmailAddress"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:ems="10"
	      android:hint="@string/EditText" />
	
	 <Button
	        android:id="@+id/Button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:text="@string/aceptar_button_label"
	        android:onClick="onAceptarButtonClicked" />
	 
     
       <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/logout_button_label"
        android:onClick="onLogoutButtonClicked" />

</LinearLayout>
