<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".Editar_TitleActivity" >
    
      <TextView
         android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView1" />

    
  <EditText
	      android:id="@+id/EditText1"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:ems="10"
	      android:hint="@string/EditText1" />
	
	 <Button
	        android:id="@+id/Button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:text="@string/guardar_button_label"
	        android:onClick="onGuardarButtonClicked" />
	 
    

</LinearLayout>
    
    


