<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".PrincipalActivity" >
    
      <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center|top"
                    android:layout_marginTop="150dp">
                    
                <TextView
               android:id="@+id/lugar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/lugar"
               android:textAppearance="?android:attr/textAppearanceMedium" />


                <Button
                    android:id="@+id/buttonIr1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_lugar" 
                    android:onClick="onClickLugar"/>


                </LinearLayout>
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center|top">
                    
           <TextView
               android:id="@+id/compra"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/compra"
               android:textAppearance="?android:attr/textAppearanceMedium" />


           <Button
               android:id="@+id/buttonIr2"
               style="?android:attr/buttonStyleSmall"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/button_compra"
               android:onClick="onClickCompra" />
      
    

    
</LinearLayout>
</LinearLayout>
